--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^6.3.5",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.10",
