--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,12 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.23.0",
     "classnames": "^2.3.1",
+    "leaflet": "^1.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
+    "react-leaflet": "^4.0.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
@@ -34,18 +37,12 @@
       "react-app/jest"
     ]
   },
-  "browserslist": {
-    "production": [
+  "browserslist": [
       ">0.2%",
       "not dead",
       "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
     ]
-  },
+  ,
   "devDependencies": {
     "autoprefixer": "^9.8.8",
     "postcss": "^7.0.39",
