--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
+    "react-images-viewer": "^1.7.1",
     "react-leaflet": "^4.0.0",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-simple-image-viewer": "^1.2.2",
     "react-slick": "^0.28.1",
     "redux": "^4.1.1",
     "redux-logger": "^3.0.6",
